[gd_scene load_steps=6 format=2]

[ext_resource path="res://screens/menu/menu_screen.gd" type="Script" id=1]
[ext_resource path="res://screens/menu/background.png" type="Texture" id=2]
[ext_resource path="res://widgets/menu_button/menu_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://containers/home_display/home_display.tscn" type="PackedScene" id=4]
[ext_resource path="res://cards/normal/normal_card.tscn" type="PackedScene" id=5]

[node name="MenuScreen" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameBtn" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 180.0
margin_top = -100.0
margin_right = 528.0
margin_bottom = 8.0
button_text = "New Game"

[node name="LibraryBtn" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 180.0
margin_top = -10.0
margin_right = 528.0
margin_bottom = 98.0
button_text = "Card Library"

[node name="QuitBtn" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 180.0
margin_top = 80.0
margin_right = 528.0
margin_bottom = 188.0
button_text = "Quit"

[node name="HomeDisplay" parent="." instance=ExtResource( 4 )]
margin_left = 20.0
margin_top = 20.0
card_visual = ExtResource( 5 )
[connection signal="pressed" from="NewGameBtn" to="." method="_on_NewGameBtn_pressed"]
[connection signal="pressed" from="LibraryBtn" to="." method="_on_LibraryBtn_pressed"]
[connection signal="pressed" from="QuitBtn" to="." method="_on_QuitBtn_pressed"]
